--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-material": "^1.1.1",
     "angular-material-icons": "^0.7.1",
     "angular-messages": "^1.5.8",
+    "angular-sanitize": "^1.6.5",
     "angular-ui-router": "^0.3.1",
     "audio-analyser": "^1.0.2",
     "electron-cookies": "^1.1.0",
