New mode + Setup File added Breathing mode with RGB Option added self-extracting setup.exe file under "build/setup"

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-ui-router": "^0.3.1",
     "audio-analyser": "^1.0.2",
     "electron-cookies": "^1.1.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "md-color-picker": "^0.2.6",
     "moment": "^2.14.1",
